# Copyright (C) 2021 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_source_set("rockchip_vpu_src") {
  sources = [
    "rk_list.cpp",
    "vpu.c",
    "vpu_api.cpp",
    "vpu_api_legacy.cpp",
    "vpu_api_mlvec.cpp",
    "vpu_mem_legacy.c",
  ]

  cflags_c = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-Wno-format",
  ]

  cflags_cc = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-Wno-predefined-identifier-outside-function",
    "-Wno-macro-redefined",
    "-Wno-format-extra-args",
    "-Wno-format",
    "-DHAVE_CONFIG_H",
    "-DMPP_VERSION=\"1.3.7\"",
    "-DMPP_VER_HIST_CNT=0",
    "-DMPP_VER_HIST_0=\"version_0\"",
    "-DMPP_VER_HIST_1=\"version_1\"",
    "-DMPP_VER_HIST_2=\"version_2\"",
    "-DMPP_VER_HIST_3=\"version_3\"",
    "-DMPP_VER_HIST_4=\"version_4\"",
    "-DMPP_VER_HIST_5=\"version_5\"",
    "-DMPP_VER_HIST_6=\"version_6\"",
    "-DMPP_VER_HIST_7=\"version_7\"",
    "-DMPP_VER_HIST_8=\"version_8\"",
    "-DMPP_VER_HIST_9=\"version_9\"",
  ]

  include_dirs = [
    "./inc",
    "//device/soc/rockchip/rk3568/hardware/mpp/mpp/hdi_mpp",
    "//device/soc/rockchip/rk3568/hardware/mpp/include",
    "//device/soc/rockchip/rk3568/hardware/mpp/include",
    "//drivers/framework/include/utils",
    "//drivers/hdf_core/adapter/uhdf2/osal/include/",
    "//commonlibrary/c_utils/base/include",
    "//drivers/hdf_core/framework/include/utils",
  ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//device/soc/rockchip/rk3568/hardware/mpp/mpp/hdi_mpp:hdi_mpp",
  ]
  external_deps = [ "c_utils:utils" ]
}

ohos_shared_library("librockchip_vpu") {
  deps = [ ":rockchip_vpu_src" ]
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_codec"
}
