# Copyright (C) 2021 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

static_library("RkOMX_Basecomponent") {
  sources = [
    "Rockchip_OMX_Basecomponent.c",
    "Rockchip_OMX_Baseport.c",
  ]
  include_dirs = [
    ".",
    "//device/soc/rockchip/rk3568/hardware/omx_il/include/khronos",
    "//device/soc/rockchip/rk3568/hardware/omx_il/include/rockchip",
    "//device/soc/rockchip/rk3568/hardware/omx_il/osal",
    "//drivers/framework/include/utils",
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits",
    "//utils/native/base/include",
    "//device/soc/rockchip/rk3568/hardware/rga/include",
    "//third_party/openmax/api/1.1.2",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/adapter/uhdf2/osal/include/",
  ]

  cflags = [
    "-Wno-implicit-function-declaration",
    "-Wno-format",
    "-Wno-pointer-to-int-cast",
  ]

  deps = [
    "//device/soc/rockchip/rk3568/hardware/omx_il/osal:RkOMX_OSAL",
    "//device/soc/rockchip/rk3568/hardware/rga:librga",
  ]
}

ohos_shared_library("libRkOMX_Resourcemanager") {
  sources = [ "Rockchip_OMX_Resourcemanager.c" ]

  include_dirs = [
    ".",
    "//device/soc/rockchip/rk3568/hardware/omx_il/osal",
    "//device/soc/rockchip/rk3568/hardware/omx_il/include/khronos",
    "//device/soc/rockchip/rk3568/hardware/omx_il/include/rockchip",
    "//drivers/framework/include/utils",
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits",
    "//utils/native/base/include",
    "//device/soc/rockchip/rk3568/hardware/rga/include",
    "//third_party/openmax/api/1.1.2",
    "//drivers/hdf_core/adapter/uhdf2/osal/include/",
    "//drivers/hdf_core/framework/include/utils",
  ]

  cflags = [
    "-Wno-implicit-function-declaration",
    "-DSUPPORT_RGA",
    "-Wno-pointer-to-int-cast",
  ]

  deps = [
    ".:RkOMX_Basecomponent",
    "//device/soc/rockchip/rk3568/hardware/omx_il/osal:RkOMX_OSAL",
    "//device/soc/rockchip/rk3568/hardware/rga:librga",
  ]
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_codec"
}
